fixed it to show other trucks

--- a/templates/index.html
+++ b/templates/index.html
@@ -162,8 +162,7 @@
                           position: x,
                           icon: icon['Mexican'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
-                        });
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'                        });
 
                         // Starting the infowindow popup
                         var infowindow = new google.maps.InfoWindow();
@@ -185,7 +184,7 @@
                           position: x,
                           icon: icon['Greek'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -208,7 +207,7 @@
                           position: x,
                           icon: icon['IceCream'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -231,7 +230,7 @@
                           position: x,
                           icon: icon['Doughnut'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -254,7 +253,7 @@
                           position: x,
                           icon: icon['FastFood'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -277,7 +276,7 @@
                           position: x,
                           icon: icon['BBQ'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -300,7 +299,7 @@
                           position: x,
                           icon: icon['Organic'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -323,7 +322,7 @@
                           position: x,
                           icon: icon['Deserts'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -346,7 +345,7 @@
                           position: x,
                           icon: icon['Other'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -532,7 +531,7 @@
                           position: x,
                           icon: icon['Doughnut'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -555,7 +554,7 @@
                           position: x,
                           icon: icon['FastFood'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -578,7 +577,7 @@
                           position: x,
                           icon: icon['BBQ'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -601,7 +600,7 @@
                           position: x,
                           icon: icon['Organic'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -624,7 +623,7 @@
                           position: x,
                           icon: icon['Deserts'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
@@ -647,7 +646,7 @@
                           position: x,
                           icon: icon['Other'],
                           map: map,
-                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Address: " + obj.address + '</div>'
                         });
 
                         // Starting the infowindow popup
