not much coding, but just created dummy data

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,17 @@
     .star.icon {
       color: #DAA520;
     }
+    .titlename {
+      text-align: center;
+      text-decoration: underline;
+    }
   </style>
 {% endblock %}
 
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-  <h1>Find your Food Truck</h1>
+  <h1 class="titlename">Find your Food Truck</h1>
 
   <div class="ui grid" >
       <div class="eight wide column">
