cleaning up some code

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,8 @@
             <ul><a id="options" href="{% url 'menu_create_view' %}"> <i class="food icon"></i> New Food Item</a></ul>
           {% endif %}
           <ul><a id="options" href="{% url 'logout' %}?next={% url 'index_view' %}"> <i class="power icon"></i> Logout</a></ul>
-        {% endif %}
+        {% endif %}<br><br><br>
+        <ul><a id="options" href="https://github.com/rallen0150/final_project"> <i class="github icon"></i> Github</a></ul>
       </div>
       <div class="pusher">
         <div class="ui basic icon fixed menu">
