--- a/templates/foodtruck/menu_detail.html
+++ b/templates/foodtruck/menu_detail.html
@@ -16,11 +16,17 @@
   #anchor {
     font-family: sans-serif;
   }
+  #menu_title {
+    font-size: 32px;
+    font-family: cursive;
+    text-decoration: underline;
+  }
   </style>
 {% endblock %}
 
 {% block content %}
 <br><br>
+<b id="menu_title">{{ menu.truck.truck_name }}'s Menu</b>
 <div class="menu_items">
   {% for food in menu %}
     <div>
