--- a/templates/foodtruck/foodtruck_detail.html
+++ b/templates/foodtruck/foodtruck_detail.html
@@ -12,6 +12,7 @@
     <div class="eight wide column">
       <a href="{% url 'menu_detail_view' object.id %}">View Menu</a><br><br>
       Average Rating Of Truck: {{ object.show_avg_rating|floatformat:2 }}
+      {% if request.user.profile.is_user %}
       <form class="" action="{% url 'truck_rating_list_create_api_view' object.id %}" method="post">
         {% csrf_token %}
         <div class="star_rating">
@@ -22,6 +23,7 @@
           <input type="radio" name="rating" class="rating" value="5" {% if object.avg_rating == 5 %}checked='checked'{% endif %} style="display:none;">
         </div>
       </form>
+      {% endif %}
       <br>
       {% if request.user.is_authenticated %}
         <form class="" action="{% url 'favorite_update_view' object.id %}" method="post">
