--- a/templates/foodtruck/menu_form.html
+++ b/templates/foodtruck/menu_form.html
@@ -21,7 +21,7 @@
         </p>
       {% endif %}
       {% endcomment %} -->
-      <input type="submit" name="" value="New Food Item!">
+      <input type="submit" class="ui blue submit button" name="" value="New Food Item!">
     </form>
 
     <b><a href="{% url 'index_view' %}">Finished Making Menu, Back to Home</a></b>
